servidorPush/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evolua
  labels:
    app: evolua
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evolua
      version: v1
  template:
    metadata:
      labels:
        app: evolua
        version: v1
    spec:
      containers:
      - name: evolua
        image: docker.io/quirinobytes/evolua@sha256:cf9b754fb3bfc6c3e87583655138a28fbde5e1ac8b61b658d41148f9709d225a
        resources:
          requests:
            cpu: "200m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /usr/src/app/audioupload
          name: evolua-audioupload-pv
        - mountPath: /usr/src/app/fileuploadMural
          name: evolua-fileuploadmural-pv
        - mountPath: /usr/src/app/videoupload
          name: evolua-videoupload-pv
        - mountPath: /usr/src/app/fileupload
          name: evolua-fileupload-pv
      volumes:
      - name: evolua-audioupload-pv
        persistentVolumeClaim:
          claimName: evolua-audioupload-pvc
      - name: evolua-fileupload-pv
        persistentVolumeClaim:
          claimName: evolua-fileupload-pvc
      - name: evolua-fileuploadmural-pv
        persistentVolumeClaim:
          claimName: evolua-fileuploadmural-pvc
      - name: evolua-videoupload-pv
        persistentVolumeClaim:
          claimName: evolua-videoupload-pvc
