servidorPush/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evolua-service
  labels:
    app: evolua
    service: evolua-service
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.15.66
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: evolua
  type: LoadBalancer
