servidorPush/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: evolua-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /mural
          backend:
            serviceName: evolua-service
            servicePort: 3000
        - path: /banana
          backend:
            serviceName: evolua-service
            servicePort: 80
